# nyc-311-mlops

./: .gitignore  Makefile  README.md  databricks.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  reset.sh
.databricks/: bundle.yml
.github/workflows/: ci.yml  deploy.yml
api/: Dockerfile  __init__.py
conf/: cluster_config.yaml  dev.yaml  qa.yaml
dashboard/: Dockerfile  __init__.py
data/: db_utils.py
ingestion/: fetch_api_data.py  sample_from_mysql.py
ml/: __init__.py  anomaly.py  forecast.py  train_model.py  validation.py
monitoring/: __init__.py
notebooks/: 00_setup_and_exploration.py  01_bronze_ingestion.py  01_data_ingestion_preprocessing.py  02_silver_transformation.py  03_gold_aggregation.py  04_ml_forecasting.py  05_anomaly_detection.py
orchestration/: __init__.py  forecast_from_gold_flow.py  full_pipeline_flow.py
scripts/: initial_bronze_load.py  plot_forecast_output.py  run_forecast_standalone.py  test_forecast_input.py
src/: setup.py
src/nyc311/ingestion/: api_client.py
src/nyc311/ml/: anomaly_detection.py  forecasting.py  tuning.py
tests/: conftest.py  test_bronze_backfill.py  test_forecast_run.py  test_gold_backfill.py  test_pipeline_backfill.py  test_silver_backfill.py
tests/integration/: test_db_writes.py  test_full_pipeline_end_to_end.py
tests/unit/: test_ingestion.py  test_pipeline_flow_mocked.py  test_train_model_wrapper.py  test_transform_bronze_to_silver.py  test_transform_silver_to_gold.py
transformation/: __init__.py  transform_to_gold.py  transform_to_silver.py
(+5 files in other folders)
