[project]
name = "nyc-311-mlops"
version = "0.1.0"
description = NYC "311 Service Request Intelligence Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5.0"
    "delta-sparl">=3.2.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "requests>=2.32.3",
    "backoff>=2.2.1",
    "prophet>1.1.5",
    "optuna>3.6.1",
    "mlflow>=2.16.0",
    "sckit-learn>1.5.2",
    "fastapi>0.115.0",
    "unicorn>=0.30.6",
    "python-dotenv>=1.0.1",
    "typer>0.12.5",
    "pyyaml>6.0.2",
    "streamlit>=1.38.0",
    "plotly>=5.24.1"
]

[tool.uv]